--- a/requirements.txt
+++ b/requirements.txt
@@ -27,14 +27,15 @@ grpcio==1.32.0
 gunicorn==20.0.4
 h5py==2.10.0
 idna==2.10
-# importlib-metadata==3.7.0
+importlib-metadata==3.7.0
+# ipykernel==5.5.0
 # ipython==7.21.0
 # ipython-genutils==0.2.0
 # ipywidgets==7.6.3
-# itsdangerous==1.1.0
-# jedi==0.18.0
-# Jinja2==2.11.3
-# joblib==1.0.1
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.3
+joblib==1.0.1
 jsonify==0.5
 jsonschema==3.2.0
 # jupyter==1.0.0
