--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
 
     - name: gcr.io/cloud-builders/gcloud
       args: [ app, deploy, app.yaml, dispatch.yaml, --version=$SHORT_SHA ]
-      # timeout: '1500s
+      timeout: '1500s
